# lattice-backup

./: .env.sample  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  main.py  pyproject.toml
lattice_backup/: lattice.py  types.py
lattice_backup/queries/: competency-view.graphql  growth-area-progress.graphql  growth-area.graphql  root-company-info.graphql
